feat: spot price