@@ -21,7 +21,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * @Author: smy
@@ -59,12 +58,15 @@ public class Price1dProcessor implements IProcessor {
 
     public void _do(Task task) {
 
-        String symbol = "ETHUSDT";
-        fillKline(symbol, task);
+        List<String> symbols = binanceService.getAllUsdtSymbol();
+        for (String symbol : symbols) {
+            fillNewKline(symbol, task);
+        }
+
     }
 
-    public void fillKline(String symbol, Task task) {
-        List<KLineDTO> list = binanceService.getKLines(symbol, "1d", null, DateUtils.convert2Timestamp(task.getScheduleTime()), 5);
+    public void fillNewKline(String symbol, Task task) {
+        List<KLineDTO> list = binanceService.getKlines(symbol, "1d", null, DateUtils.convert2Timestamp(task.getScheduleTime()), 5);
         if (CollectionUtils.isEmpty(list)) {
             return;
         }
@@ -80,12 +82,25 @@ public class Price1dProcessor implements IProcessor {
         price1DMapperService.saveOrUpdateBatch(addId(symbol, price1dList));
     }
 
+    public void fillAllKline(String symbol) {
+        List<KLineDTO> list = binanceService.getAllKlines(symbol, "1d");
+
+        price1DMapperService.replaceIntoBatch(list.stream().map(kLineDTO -> {
+            Price1d price1d = new Price1d();
+            BeanUtils.copyProperties(kLineDTO, price1d);
+            price1d.setSymbol(symbol);
+            price1d.setSource("Binance");
+            price1d.setDate(price1d.getOpenTime().format(dtf));
+            return price1d;
+        }).toList());
+    }
+
     private List<Price1d> addId(String symbol, List<Price1d> price1dList) {
         QueryWrapper<Price1d> wrapper = new QueryWrapper<>();
         Map<String, Object> map = new HashMap<>(2);
         map.put("symbol", symbol);
         map.put("source", "Binance");
-        wrapper.allEq(map).in("date", price1dList.stream().map(Price1d::getDate).collect(Collectors.toList()));
+        wrapper.allEq(map).in("date", price1dList.stream().map(Price1d::getDate).toList());
         List<Price1d> exsitsList = price1DMapperService.list(wrapper);
         if (CollectionUtils.isEmpty(exsitsList)) {
             price1DMapperService.saveOrUpdateBatch(price1dList);
